[package]
name = "grasshopper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
base64 = "0.21.0"
chrono = "0.4.24"
color-eyre = "0.6.2"
eyre = "0.6.8"
form_urlencoded = "1.1.0"
futures = "0.3.28"
hmac = "0.12.1"
jwt = "0.16.0"
mlua = { version = "0.8.8", features = ["luajit52", "parking_lot", "mlua_derive", "macros", "serde", "async", "serialize"] }
once_cell = "1.17.1"
prometheus = "0.13.3"
reqwest = { version = "0.11.17", features = ["rustls", "rustls-tls-webpki-roots", "blocking", "stream", "socks"] }
rust_decimal = { version = "1.29.1", features = ["maths"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.6"
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
urlencoding = "2.1.2"
uuid = { version = "1.3.2", features = ["v4"] }

[target.aarch64-unknown-linux-gnu.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"]}
mlua = { version = "0.8.8", features = ["luajit52", "parking_lot", "mlua_derive", "macros", "serde", "async", "serialize", "vendored"] }

[profile.release]
debug = 1

[dev-dependencies]
rust_decimal_macros = "1.29.1"
