[package]
name = "grasshopper"
version = "0.4.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
base64 = "0.21.0"
color-eyre = "0.6.2"
exqwest = { git = "https://github.com/cr0sh/exqwest.git", version = "0.1.0" }
eyre = "0.6.8"
futures = "0.3.28"
grasshopper-macros = { version = "0.1.0", path = "macros" }
libc = "0.2.148"
mimalloc = "0.1.38"
notify-debouncer-full = "0.3.1"
once_cell = "1.17.1"
prometheus = "0.13.3"
reqwest = { version = "0.11.17", features = ["rustls-tls", "rustls-tls-webpki-roots", "stream", "socks"], default-features = false }
rust_decimal = { version = "1.29.1", features = ["maths"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-panic = "0.1.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
urlencoding = "2.1.2"

[workspace]
members = ["macros"]

[profile.release]
debug = 1

[profile.sanitized]
inherits = "release"

[build-dependencies]
cc = "1.0.83"
rust_decimal_macros = "1.29.1"

